integrating ted\'s files including "RF" and "RS485" editions

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ eagle.epf
 *.info
 
 *.eps
+node_modules
+bower_components
+coverage
+Controller/npm-debug.log
+Controller/messages.txt
+Controller/test/npm-debug.log
+COntroller/nodeconfig
